--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,7 +36,7 @@
 		<div class="project" id="{{id}}">
 			<div class="thumbnail">
 				<a href="#">
-					<img src="images/{{image}}" alt="Lorem Pixel image" class="img">
+					<img src="images/{{image}}" alt="Lorem Pixel image" class="img detailsImage">
 					<p>{{name}}</p>
 				</a>
 				<div class="details"></div>
